--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,10 +25,11 @@ bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nv
 
 # forget the find window.
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
-bind-key -r M-t run-shell "tmux neww tmux-sessionizer -s 1"
-bind-key -r M-n run-shell "tmux neww tmux-sessionizer -s 2"
-bind-key -r M-s run-shell "tmux neww tmux-sessionizer -s 3"
+bind-key -r M-j run-shell "tmux neww tmux-sessionizer -s 0"
+bind-key -r M-k run-shell "tmux neww tmux-sessionizer -s 1"
+bind-key -r M-l run-shell "tmux neww tmux-sessionizer -s 2"
+bind-key -r M-p run-shell "tmux neww tmux-sessionizer -s 3"
 
 
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
+bind-key -r j run-shell "tmux neww /mnt/c/users/juanm/documents/MCUXpressoIDE_25.6.136/workspace/lpc55s69_calc_starter"
